# clang

./: CMakeLists.txt  sample.cpp  test.cpp
tests/: test.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  text.cpp
